# LS_DATA_CHAT

./: .gitignore  README.md  app.py  config.py  docker-compose.yml  dockerfile  maintain.me  pyproject.toml  requirements.txt
.streamlit/: config.toml 
agents/: sql_agent.py
database/: connection.py  reports.py  schema.py
llm/: deepseek.py
utils/: helpers.py
