[project]
name = "Artix_tickets_analizer"
version = "0.0.1"
description = "Artix tickets analizer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph==0.2.0",
    "langchain==0.3.0",
    "langchain-openai==0.3.0",
    "langchain-community==0.3.0",
    "streamlit==1.40.0",
    "pandas==2.2.3",
    "sqlalchemy==2.0.35",
    "pymysql==1.1.1",
    "paramiko==3.5.0",
    "sshtunnel==0.4.0",
    "python-dotenv==1.0.1",
    "cryptography==43.0.1",
    "plotly==5.24.0",
    "tenacity==9.0.0",
]

